# AI-Moral-Moderation-System

./: .gitignore  CLAUDE.md  RUNNING.md
.claude/skills/contribute/: SKILL.md
MMS_back/: .env.example  README.md  pyproject.toml
MMS_back/app/: __init__.py  config.py  main.py  pipeline.py
MMS_back/app/api/: __init__.py  admin.py  chat.py  feed.py  ingest.py  moderation.py
MMS_back/app/classifier/: __init__.py  base.py  binary.py  dummy.py  factory.py  typed.py
MMS_back/app/llm/: __init__.py  base.py  dummy.py  factory.py  local.py  openai.py  polish.py
MMS_back/app/polisher/: __init__.py  base.py  dummy.py  factory.py  team.py
MMS_back/app/prompts/: __init__.py
MMS_back/app/prompts/counsel/: system.yaml
MMS_back/app/prompts/persuade/: cyberbullying.yaml  hate.yaml  misinfo.yaml
MMS_back/app/rag/: __init__.py  base.py  dummy.py  factory.py  retriever.py
MMS_back/app/responder/: __init__.py  base.py  counsel.py  persuade.py  registry.py
MMS_back/app/schemas/: __init__.py  classification.py  post.py  rag.py  reply.py  session.py
MMS_back/app/store/: audit.py  classifications.py  db.py  posts.py  replies.py  sessions.py
MMS_back/data/: mms.db  mock_posts.jsonl
MMS_back/models/multitask_roberta_base_v1/: best_thresholds.json
MMS_back/scripts/: seed_mock.py
MMS_back/tests/: conftest.py  test_factory_contract.py  test_moderation.py  test_pipeline.py  test_polisher_bypass.py  test_registry.py
MMS_front/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
MMS_front/src/: App.tsx  styles.css  viewMode.ts
(+11 files in other folders)
